왠만한 디버깅은 좀 함

--- a/5/Makefile
+++ b/5/Makefile
@@ -67,3 +67,39 @@ test :
 	@-$(TARGET) -s "20150003"
 	@-$(TARGET) -s "20150004"
 	@-$(TARGET) -s "20150005"
+	@echo "test #10 - 삭제"
+	@-$(TARGET) -d "20142303"
+	@-$(TARGET) -d "20150003"
+	@-$(TARGET) -d "20150004"
+	@-$(TARGET) -d "20150005"
+	@-hd student.idx
+	@-hd student.dat
+	@echo "test #11 - 4개의 작은 데이터 할당 (재사용성 테스트)"
+	$(TARGET) -a "1" "2" "3" "4" "5" "6" "7" 
+	$(TARGET) -a "2" "2" "3" "4" "5" "6" "7" 
+	$(TARGET) -a "3" "2" "3" "4" "5" "6" "7" 
+	$(TARGET) -a "4" "2" "3" "4" "5" "6" "7" 
+	@-hd student.idx
+	@-hd student.dat
+	@echo "test #12 - 검색"
+	@-$(TARGET) -s "1"
+	@-$(TARGET) -s "2"
+	@-$(TARGET) -s "3"
+	@-$(TARGET) -s "4"
+	@echo "test #13 - 삭제"
+	@-$(TARGET) -d "1"
+	@-$(TARGET) -d "2"
+	@-$(TARGET) -d "3"
+	@-$(TARGET) -d "4"
+	@echo "test #14 - 4개의 좀 더 큰 데이터 할당 (재사용성 테스트)"
+	$(TARGET) -a "1" "20" "30" "4" "50" "60" "70" 
+	$(TARGET) -a "2" "20" "30" "4" "50" "60" "70" 
+	$(TARGET) -a "3" "20" "30" "4" "50" "60" "70" 
+	$(TARGET) -a "4" "20" "30" "4" "50" "60" "70" 
+	@-hd student.idx
+	@-hd student.dat
+	@echo "test #15 - 검색"
+	@-$(TARGET) -s "1"
+	@-$(TARGET) -s "2"
+	@-$(TARGET) -s "3"
+	@-$(TARGET) -s "4"
